# rustsai

./: .gitignore  README.md  index.html
.github/workflows/: releases.yml  releasex.yml
_prop/Gemini_OCR/: Cargo.toml
_prop/Gemini_OCR/src/: main.rs
_prop/WhisperLiveKitp/: CHANGELOG.md  docker-compose.yaml
_prop/edl2srt/: CHANGELOG.md  Cargo.toml
_prop/edl2srt/src/: main.rs
_prop/fast_dedup/: Cargo.toml
_prop/fast_dedup/src/: main.rs
_prop/zqinfoss/: CHANGELOG.md  Cargo.toml
_prop/zqinfoss/src/: main.rs
assets/css/: base.css  index.css
assets/js/: index.js
css/: index.css
docs/: README_en.md
edl2srt/src/: main.rs
fast_dedup/src/: main.rs
