[package]
name = "zqinfoss"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时核心，提供 async/await 支持，features 启用全功能 (包含文件IO、网络等)
tokio = { version = "1", features = ["full"] }

# HTTP 客户端库，用于请求 Steam API 获取游戏名称
# 0.12 是目前的最新主版本，底层已升级至 hyper 1.0，性能与兼容性更好
# 启用 json feature 以便直接将响应解析为 serde_json::Value
reqwest = { version = "0.12", features = ["json"] }

# 序列化与反序列化框架，用于读写 JSON 缓存和生成输出
# 启用 derive 以便使用 #[derive(Serialize)] 宏
serde = { version = "1", features = ["derive"] }

# JSON 解析库，配合 serde 使用，处理缓存文件和 API 响应
serde_json = "1"

# URL 编码库，用于将游戏名安全地拼接到 HLTB 查询链接中 (例如空格转为 %20)
urlencoding = "2.1"

# 进度条库，用于在请求网络或解析时显示动态旋转动画 (spinner)，提升交互体验
# 0.18 是目前的最新主版本
indicatif = "0.18"